--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dependencies": {
         "babel-preset-env": "^1.7.0",
         "dedup": "^0.1.5",
+        "imagemin": "^6.1.0",
         "rtl-bootstrap": "0.0.5",
-        "webpack": "^3.12.0"
+        "webpack": "^4.30.0"
     }
 }
