--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
         "browser-sync": "^2.26.5",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.4.0",
         "laravel-mix": "^4.0.0",
         "lodash": "^4.17.5",
-        "popper.js": "^1.12",
+        "popper.js": "^1.15.0",
         "resolve-url-loader": "^2.3.1",
+        "rtl-bootstrap": "0.0.5",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
@@ -28,8 +29,9 @@
     "dependencies": {
         "babel-preset-env": "^1.7.0",
         "dedup": "^0.1.5",
+        "dropzone": "^5.5.1",
         "imagemin": "^6.1.0",
-        "rtl-bootstrap": "0.0.5",
+        "owl.carousel": "^2.3.4",
         "webpack": "^4.30.0"
     }
 }
