--- a/package.json
+++ b/package.json
@@ -10,28 +10,33 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "bootstrap": "^4.0.0",
         "browser-sync": "^2.26.5",
-        "browser-sync-webpack-plugin": "^2.0.1",
+        "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.1",
-        "jquery": "^3.4.0",
-        "laravel-mix": "^4.0.0",
+        "jquery": "^3.4.1",
+        "jquery-ui": "^1.12.1",
+        "laravel-mix": "^4.0.16",
         "lodash": "^4.17.5",
         "popper.js": "^1.15.0",
         "resolve-url-loader": "^2.3.1",
         "rtl-bootstrap": "0.0.5",
-        "sass": "^1.15.2",
+        "sass": "^1.20.3",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.9.0",
         "babel-preset-env": "^1.7.0",
         "dedup": "^0.1.5",
         "dropzone": "^5.5.1",
+        "font-awesome": "^4.7.0",
         "imagemin": "^6.1.0",
+        "ol": "^5.3.3",
+        "ol-layerswitcher": "^3.2.0",
         "owl.carousel": "^2.3.4",
-        "webpack": "^4.30.0"
+        "webpack": "^4.33.0"
     }
 }
