--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=ceea7712b7c1aa380e4e",
-    "/css/app.css": "/css/app.css?id=227817436d2eb3d888e3"
+    "/js/app.js": "/js/app.js?id=8a4aedfd4bb34cca858a",
+    "/css/app.css": "/css/app.css?id=a6ff10ba2fd9fff7504f",
+    "/js/home.js": "/js/home.js?id=6f01c143c9c3f74da69b"
 }
