--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "ol": "^5.3.3",
         "ol-layerswitcher": "^3.2.0",
         "owl.carousel": "^2.3.4",
+        "sweetalert2": "^8.12.1",
         "webpack": "^4.33.0"
     }
 }
