--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "dropzone": "^5.5.1",
         "font-awesome": "^4.7.0",
         "imagemin": "^6.1.0",
+        "lity": "^2.3.1",
         "ol": "^5.3.3",
         "ol-layerswitcher": "^3.2.0",
         "owl.carousel": "^2.3.4",
