--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=a4bf76d2950ea7d7a150",
-    "/css/app.css": "/css/app.css?id=1d00841ed33098bd258c",
-    "/js/home.js": "/js/home.js?id=6f01c143c9c3f74da69b"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/home.js": "/js/home.js"
 }
