--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
         "dropzone": "^5.5.1",
         "font-awesome": "^4.7.0",
         "imagemin": "^6.1.0",
+        "jquery-captcha": "^2.3.0",
         "lity": "^2.3.1",
         "ol": "^5.3.3",
         "ol-layerswitcher": "^3.2.0",
         "owl.carousel": "^2.3.4",
         "sweetalert2": "^8.12.1",
+        "vue-recaptcha": "^1.2.0",
         "webpack": "^4.33.0"
     }
 }
