--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "ol-layerswitcher": "^3.2.0",
         "owl.carousel": "^2.3.4",
         "sweetalert2": "^8.12.1",
+        "vue-persian-datetime-picker": "^2.0.2",
         "vue-recaptcha": "^1.2.0",
         "webpack": "^4.33.0"
     }
