--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
   "license": "MIT",
   "require": {
     "php": "^7.1.3",
-
     "fideloper/proxy": "^4.0",
     "kitetail/zttp": "^0.6.0",
     "laravel/framework": "5.8.*",
     "laravel/tinker": "^1.0",
     "morilog/jalali": "3.*",
-    "owen-it/laravel-auditing": "^9.2"
+    "owen-it/laravel-auditing": "^9.2",
+    "queueworker/sansdaemon": "^1.1"
   },
   "require-dev": {
     "beyondcode/laravel-dump-server": "^1.0",
