--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "fideloper/proxy": "^4.0",
     "kitetail/zttp": "^0.6.0",
     "laravel/framework": "5.8.*",
+    "laravel/passport": "^7.3",
     "laravel/tinker": "^1.0",
     "morilog/jalali": "3.*",
     "owen-it/laravel-auditing": "^9.2",
