--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "ol": "^5.3.3",
         "ol-layerswitcher": "^3.2.0",
         "owl.carousel": "^2.3.4",
+        "proj4": "^2.5.0",
         "sweetalert2": "^8.12.1",
         "vue-persian-datetime-picker": "^2.0.2",
         "vue-recaptcha": "^1.2.0",
